--- a/apps/pwa/src/styles/index.scss
+++ b/apps/pwa/src/styles/index.scss
@@ -7,8 +7,8 @@
 @import './nostr/feed.scss';
 @import './components/_cashu-wallet.scss';
 @import './cashu.css';
-@import './components/modal';
-@import './components/toast'; 
+@import './components/modal.scss';
+@import './components/toast.scss'; 
 @import 'quill/dist/quill.snow.css';
 @import 'animations.scss';
 @import 'loading.scss';
@@ -240,10 +240,8 @@ div {
 }
 
 input {
-  color: var(--contrast-900);
-  background-color: var(--contrast-500);
-  border: 1px solid var(--border);
-  text-wrap: nowrap;
+  color: var(--foreground);
+  background-color: var(--background);
 }
 
 select {
@@ -284,11 +282,6 @@ p {
   line-height: 1.5;
   font-size: 1.25rem;
   margin-bottom: 1em;
-}
-
-input {
-  color: var(--foreground);
-  background-color: var(--background);
 }
 
 a {
