ui bitchhat in pwa

--- a/apps/pwa/src/styles/index.scss
+++ b/apps/pwa/src/styles/index.scss
@@ -15,6 +15,7 @@
 @import 'launchpad.scss';
 @import 'components/_cashu-wallet.scss';
 @import 'components/nostr-form.scss';
+@import './chat.scss';
 // @import 'variables.scss';
 
 
